--- a/Instance/public/css/styles.css
+++ b/Instance/public/css/styles.css
@@ -23,48 +23,63 @@ h1 {
     text-shadow: 0 0 10px #00ccff, 0 0 20px #00ccff, 0 0 30px #00ccff;
 }
 
-table {
+.table-container {
+    max-height: 300px; /* Altura máxima de la tabla, puedes ajustarla */
+    overflow-y: auto;  /* Habilita desplazamiento vertical */
+    margin-top: 20px;   /* Espacio encima de la tabla */
+}
+
+.table {
     width: 100%;
     margin-top: 20px;
     border-radius: 10px;
     overflow: hidden;
-    background-color: #1a1a1a;
+    --bs-table-color: #ffffff;
+    --bs-table-bg: #1a1a1a;
+    --bs-table-border-color: #444444;
+    --bs-table-accent-bg: rgba(0, 0, 0, 0.88);
+    --bs-table-striped-color: #ffffff;
+    --bs-table-striped-bg: #2a2a2a;
+    --bs-table-active-color: #ffffff;
+    --bs-table-active-bg: #000000;
+    --bs-table-hover-color: #ffffff;
+    --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
 }
 
 .table-bordered {
-    border: 1px solid #444444; 
+    border: 1px solid #444444;
 }
 
 .table-striped tbody tr:nth-child(odd) {
-    background-color: #1a1a1a; 
+    background-color: #1a1a1a !important;
 }
 
 .table-striped tbody tr:nth-child(even) {
-    background-color: #2a2a2a; 
+    background-color: #2a2a2a !important;
 }
 
 .table thead {
-    background-color: #1a1a1a; 
-    color: #ffffff; 
+    background-color: #121212;
+    color: #ffffff;
 }
 
 th, td {
     padding: 15px;
     text-align: left;
-    color: #ffffff; 
+    color: #ffffff !important;
 }
 
 th {
     font-weight: bold;
-    color: #00ccff; 
+    color: #00ccff !important;
 }
 
 td.fw-bold {
-    color: #00ccff; 
+    color: #00ccff;
 }
 
 td {
-    border-top: 1px solid #444444; 
+    border-top: 1px solid #444444;
 }
 
 #time {
